# IsThisStockGood

./: .gitignore  get_issues.py  main.py  populate_database.py  pyproject.toml  requirements.txt  ticker_tester.py  vercel.json
IsThisStockGood/: DataFetcher.py
IsThisStockGood/DataProviders/: MSNMoney.py  StockRow.py  YahooFinance.py
isthisstockgood/: DataFetcher.py  Morningstar.py  StockRow.py  financial_modeling_prep.py  populate_database.py  scripts.py  server.py  ticker_tester.py  utils.py
isthisstockgood/Active/: MSNMoney.py  YahooFinance.py  Zacks.py
isthisstockgood/DataProviders/: MSNMoney.py  Morningstar.py  StockRow.py  YahooFinance.py
isthisstockgood/Obsolete/: StockRow.py
src/: DataFetcher.py
src/Obsolete/: StockRow.py
test/: test_DataFetcher.py  test_MSNMoney.py  test_fmp.py
tests/: DataFetcher.py  MSNMoney.py  test_DataSources.py  test_RuleOneInvestingCalculations.py  test_Zacks.py  test_api.py  test_fmp.py  test_issue_manager.py
