[tool.poetry]
name = "IsThisStockGood"
version = "0.1.0"
description = ""
authors = ["Patryk Kocielnik <pkocieln@akamai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.1.0"
requests-futures = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
