[tool.poetry]
name = "IsThisStockGood"
version = "0.1.0"
description = ""
authors = ["Patryk Kocielnik <pkocieln@akamai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.1.0"
requests-futures = "1.0.0"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
populate_database = 'isthisstockgood.scripts:populate_database'
test_ticker = 'isthisstockgood.scripts:test_ticker'
