[tool.poetry]
name = "isthisstockgood"
version = "0.1.0"
description = ""
authors = ["Patryk Kocielnik <patryk@kocielnik.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
requests-futures = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
populate_database = 'isthisstockgood.scripts:populate_database'
test_ticker = 'isthisstockgood.scripts:test_ticker'
